--- a/packages/ui-library/src/css/settings-sections.scss
+++ b/packages/ui-library/src/css/settings-sections.scss
@@ -320,9 +320,6 @@
                 vertical-align: top;
                 padding-right: 0;
             }
-            .help-tooltip {
-                left: 10px;
-            }
         }
         .reset {
             text-transform: none;
